# regt

./: .editorconfig  .gitignore  README.md  make  meson.build
old/: adhesion.h  cmd_regt.cc  main.cc  make.sh
org/: README.org  README.tex
scripts/: Scatter plot test.ipynb  check-headers.sh  generate-header.sh  h5-config.sh  lib.scm  phat-reader.py  phat-reader.scm  premeson.sh  read-data.scm
src/: meson.build
src/alpha/: Alpha_shape_3.h  meson.build  test.cc
src/base/: access.hh  array.hh  box.hh  boxconfig.hh  cvector-test.cc  cvector.hh  date.cc  date.hh  fft.cc  fft.hh  fourier.cc  fourier.hh  header.cc  header.hh  history.cc  history.hh  interpol.hh  inverse_log.cc  main.cc  map.hh  mdrange-test.cc  mdrange.hh  meson.build  misc.hh  mtypeid.cc  mtypeid.hh  mvector.hh  progress.hh  reverse_bits.cc  splitter.cc  splitter.hh  system.hh
src/glass/: distances.hh  glass.cc  meson.build  test.cc
src/ic/: ic.cc  ic.hh  main.cc  meson.build
src/misc/: bcspline.py  bspline.ih  bspline.py  bspline.txt  cspline.ih  gradient.hh  hessian.hh  interpol.hh  kdtree.h  kdtree.hh  kdtree_implementation.h  kdtree_implementation.ih  meson.build  spline1.ih  spline2.ih  spline3.ih  tspline.ih  tspline.py  tspline.txt
src/msc/: meson.build  msc.cc  msc.hh
src/ply/: meson.build  ply.cc  ply.hh
src/regt/: adhesion.hh  adhesion.hh~  adhesion2.hh  adhesion_periodic.hh  adhesion_traits.hh  main.cc  main.cc~  main2.cc  meson.build  ply_writer.hh  system.hh  velocity.hh
src/support/: constants.hh  map.hh  meson.build  misc.hh  png.hh  progress-bar.hh  (+1 more)
test/: meson.build
(+32 files in other folders)
